...
                                         descriptionLabelText: profile?.bio)
        return viewModel
    }
    
    func showExitAlert() -> TwoButtonsAlertModel {
        let alertModel = TwoButtonsAlertModel(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйти?",
            logOutActionButtonText: "Да",
            cancelActionButtonText: "Нет")
        {[weak self] in
            guard let self = self else {return}
            storage?.removeToken()
            CleanCookieStorage.clean()
            if let viewController = viewController {
...
