//
//  ProfileViewModel.swift
//  ImageFeed
//
//  Created by Альберт Хайдаров on 28.11.2023.
//

import Foundation
struct Profile {
    let username = {
        
    }
}
